--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.github.yanshenwei</groupId>
     <artifactId>cos-spring-boot-starter</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <name>cos-spring-boot-starter</name>
     <url>https://github.com/yanshenwei/cos-spring-boot-starter</url>
     <description>
@@ -15,6 +15,7 @@
             alioss v3.15.2
             minio  v8.4.5
         2022-11-12 v1.0.1
+        2022-11-14 v1.0.2
     </description>
 
     <properties>
@@ -31,7 +32,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.2.0.RELEASE</version>
+                <version>2.7.5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -66,6 +67,12 @@
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <version>8.4.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.10.0</version>
         </dependency>
 
         <dependency>
